private_key_generator/tests/compile_fails/id_length_too_small.stderr
error[E0080]: evaluation of `<private_key_generator_docs::BinaryId<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B1>, 3, 32, 56, 8> as private_key_generator_docs::EncodedId>::MAC_LENGTH` failed
 --> src/id.rs
  |
  | ...=> [/* The IdLength must be large enough to hold `MacLength bytes + MAX_PREFIX_LENGTH bytes + (2 + VERSION_BITS + TIMESTAMP_BITS) worth of bytes` */][ MacLength::USIZE ]
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the length is 0 but the index is 5

note: the above error was encountered while instantiating `fn private_key_generator_docs::KeyGenerator::<sha2::digest::core_api::CoreWrapper<hkdf::hmac::HmacCore<sha2::digest::core_api::CoreWrapper<sha2::digest::core_api::CtVariableCoreWrapper<sha2::Sha256VarCore, private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, sha2::OidSha256>>>>, private_key_generator_docs::VersioningConfig<3, 600, false, 4>, rand_chacha::ChaCha8Rng, sha2::digest::core_api::CoreWrapper<sha2::digest::core_api::CtVariableCoreWrapper<sha2::Sha256VarCore, private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, sha2::OidSha256>>>::fill_id_hmac::<private_key_generator_docs::BinaryId<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B1>, 3, 32, 56, 8>>`
   --> src/key_generator.rs
    |
    |         self.fill_id_hmac(&mut id, id_type, associated_data);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
